Fixed SDK margin alignment, bouncing animation

--- a/src/screens/styles/customizeScreen.scss
+++ b/src/screens/styles/customizeScreen.scss
@@ -83,7 +83,7 @@
             border-radius: 50%;
             width: 30px;
             height: 30px;
-            margin: 5 3;
+            margin: 5;
             // margin: 8px 3px 3px 3px;
             border: solid 2px rgba(74, 74, 74, 0.414);
         }
